Fix: download links broken on dashboards

--- a/client/app/assets/css/redash.css
+++ b/client/app/assets/css/redash.css
@@ -674,3 +674,12 @@ div.table-name:hover {
 .m-2{
   margin:2px;
 }
+
+.dropdown-menu > .disabled{
+ cursor: not-allowed;
+}
+
+/* The real magic ;) */
+.dropdown-menu > .disabled > a{
+ pointer-events: none;
+}
